Fix HTML structure and update stylesheet paths

--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Projects - Hikmal Akbar Fauzan</title>
-<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -56,6 +56,7 @@
   <button id="backToTop">Back to Top</button>
 </footer>
 
-<script src="../js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
+
 </html>
