--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Contact - Hikmal Akbar Fauzan</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -46,7 +46,8 @@
   <button id="backToTop">Back to Top</button>
 </footer>
 
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 </body>
 
 </html>
+
